ovis: build update
- Add '--enable-doc' option so that 'doc' will not get genrated by default when
  'make install'.
- Modify options.m4 so that libevent INC flag won't use CPPFLAGS and applied
  everywhere.
- Update Makefile.am's to match options.m4, i.e. removing -L@XXX_LIBDIR@ and
  using @XXX_LIBDIR_FLAG@ instead. The same goes for -I@XXX_INCDIR@.
- Add --with-XXX in ME so that it supports non-default location of its
  dependencies (ovis-lib, sos, ocm).

Change-Id: I878e465f20ea255366438c395711acaa51b77d26

--- a/baler/configure.ac
+++ b/baler/configure.ac
@@ -21,6 +21,8 @@ then
 	SWIG_PYTHON
 fi
 
+OPTION_WITH_EVENT
+
 AM_CONDITIONAL([ENABLE_SOS], [true])
 AM_CONDITIONAL([ENABLE_OVIS_LIB], [true])
 OPTION_DEFAULT_ENABLE([ocm], [ENABLE_OCM])
@@ -29,17 +31,11 @@ OPTION_WITH([sos], [SOS])
 OPTION_WITH([ovis-lib], [OVIS_LIB])
 OPTION_WITH([ocm], [OCM])
 
-dnl Check for libevent
-AC_CHECK_LIB(event, event_base_new, [],
-	AC_MSG_ERROR([event_base_new() not found. Baler requires libevent.]))
-dnl Reset LIBS variable.
-LIBS=""
-
 dnl Check for zap
 AC_CHECK_LIB(zap, zap_new, [],
 	AC_MSG_ERROR([zap library not found. Baler requires libzap. libzap is
 		      one of the libraries in lib-ovis (please see OVIS/lib)]),
-	-L$OVIS_LIB_LIBDIR -L$OVIS_LIB_LIB64DIR)
+	$OVIS_LIB_LIBDIR_FLAG)
 dnl Reset LIBS variable.
 LIBS=""
 
@@ -48,7 +44,7 @@ if test -z "$ENABLE_OCM_TRUE"
 then
 AC_CHECK_LIB(ocm, ocm_create, [],
 	     AC_MSG_ERROR([ocm library not found. Please see OVIS/ocm.]),
-	     -L$OCM_LIBDIR -L$OCM_LIB64DIR
+	     $OCM_LIBDIR_FLAG
 	     )
 LIBS=""
 fi
