--- a/baler/src/plugins/test/Makefile.am
+++ b/baler/src/plugins/test/Makefile.am
@@ -1,6 +1,6 @@
 AM_CFLAGS = -I@top_srcdir@/src/
 
 bin_PROGRAMS = fake_me_recv
-fake_me_recv_CFLAGS = -I@OVIS_LIB_INCDIR@
-fake_me_recv_LDADD = -L@OVIS_LIB_LIBDIR@ -L@OVIS_LIB_LIB64DIR@ -lzap -lpthread \
+fake_me_recv_CFLAGS = @OVIS_LIB_INCDIR_FLAG@
+fake_me_recv_LDADD = @OVIS_LIB_LIBDIR_FLAG@ -lzap -lpthread \
 		     -levent
