--- a/baler/src/query/Makefile.am
+++ b/baler/src/query/Makefile.am
@@ -2,12 +2,12 @@ AM_CFLAGS = -I@top_srcdir@/src/
 BALER = ../baler
 
 bquery_SOURCES = bquery.c bquery.h
-bquery_CFLAGS = $(AM_CFLAGS) -DBIN -I@SOS_INCDIR@
-bquery_LDADD = $(BALER)/libbaler.la -lsos -L@SOS_LIBDIR@
+bquery_CFLAGS = $(AM_CFLAGS) -DBIN @SOS_INCDIR_FLAG@
+bquery_LDADD = $(BALER)/libbaler.la -lsos @SOS_LIBDIR_FLAG@
 
 bin_PROGRAMS = bquery
 
 libbquery_la_SOURCES = bquery.c bquery.h
-libbquery_la_CFLAGS = $(AM_CFLAGS) -I@SOS_INCDIR@
-libbquery_la_LIBADD = $(BALER)/libbaler.la -lsos -L@SOS_LIBDIR@
+libbquery_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
+libbquery_la_LIBADD = $(BALER)/libbaler.la -lsos @SOS_LIBDIR_FLAG@
 lib_LTLIBRARIES = libbquery.la
