--- a/komondor/src/Makefile.am
+++ b/komondor/src/Makefile.am
@@ -1,8 +1,8 @@
 SUBDIRS = test
 
-AM_CFLAGS = -I@OVIS_LIB_INCDIR@ -I@SOS_INCDIR@
-AM_LDFLAGS = -L@OVIS_LIB_LIB64DIR@ -L@OVIS_LIB_LIBDIR@ \
-	     -L@SOS_LIBDIR@ -L@SOS_LIB64DIR@
+AM_CFLAGS = @OVIS_LIB_INCDIR_FLAG@ @SOS_INCDIR_FLAG@
+AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@ \
+	     @SOS_LIBDIR_FLAG@
 
 sbin_PROGRAMS = komondor
 
@@ -10,8 +10,8 @@ komondor_SOURCES = komondor.c
 komondor_LDADD = -lcoll -lzap -lpthread -lsos
 
 if ENABLE_OCM
-komondor_CFLAGS = $(AM_CFLAGS) -DENABLE_OCM -I@OCM_INCDIR@
+komondor_CFLAGS = $(AM_CFLAGS) -DENABLE_OCM @OCM_INCDIR_FLAG@
 komondor_LDADD += -locm
-komondor_LDFLAGS = $(AM_LDFLAGS) -L@OCM_LIBDIR@ -L@OCM_LIB64DIR@
+komondor_LDFLAGS = $(AM_LDFLAGS) @OCM_LIBDIR_FLAG@
 endif
 
