--- a/ldms/Makefile.am
+++ b/ldms/Makefile.am
@@ -25,6 +25,7 @@ doc:
 doxygen doxygen/html:
 	doxygen ./Doxyfile
 
+if ENABLE_DOC
 install-data-local: doxygen
 	$(MKDIR_P) $(DESTDIR)$(docdir)$(OPV)/html/search
 	for f in AUTHORS README COPYING ChangeLog ; do \
@@ -36,6 +37,6 @@ install-data-local: doxygen
 	for f in doxygen/html/search/*; do \
 		$(INSTALL_DATA) $$f $(DESTDIR)$(docdir)$(OPV)/html/search; \
 	done
-
+endif
 
 clean-local: rpm-clean
