--- a/ldms/src/store/Makefile.am
+++ b/ldms/src/store/Makefile.am
@@ -1,13 +1,13 @@
 lib_LTLIBRARIES =
 CORE = ../core
 AM_CFLAGS = -I$(srcdir)/$(CORE) @OVIS_LIB_INCDIR_FLAG@
-STORE_LIBADD = $(CORE)/libldms.la -lcoll -lovis_util @OVIS_LIB_LIB64DIR_FLAG@ \
-	       -L@OVIS_LIB_LIBDIR@
+STORE_LIBADD = $(CORE)/libldms.la -lcoll -lovis_util \
+	       @OVIS_LIB_LIBDIR_FLAG@
 
 if ENABLE_SOS
 libstore_sos_la_SOURCES = store_sos.c
 libstore_sos_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
-libstore_sos_la_LIBADD = $(STORE_LIBADD) -lsos @SOS_LIB64DIR_FLAG@ @SOS_LIBDIR_FLAG@
+libstore_sos_la_LIBADD = $(STORE_LIBADD) -lsos @SOS_LIBDIR_FLAG@
 lib_LTLIBRARIES += libstore_sos.la
 endif
 
