--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -19,7 +19,7 @@ AM_PROG_CC_C_O
 
 AC_C_CONST
 
-
+OPTION_DEFAULT_DISABLE([doc], [ENABLE_DOC])
 
 OPTION_DEFAULT_ENABLE([coll], [ENABLE_COLL])
 OPTION_DEFAULT_ENABLE([mmalloc], [ENABLE_MMALLOC])
