--- a/me/src/consumers/Makefile.am
+++ b/me/src/consumers/Makefile.am
@@ -8,6 +8,7 @@ COMMON_LIBADD = $(CORE)/libme_core.la
 
 if ENABLE_KMD
 libconsumer_kmd_la_SOURCES = consumer_kmd.c
-libconsumer_kmd_la_LIBADD = $(COMMON_LIBADD) -lzap
+libconsumer_kmd_la_CFLAGS = $(AM_CFLAGS) @OVIS_LIB_INCDIR_FLAG@
+libconsumer_kmd_la_LIBADD = $(COMMON_LIBADD) @OVIS_LIB_LIBDIR_FLAG@ -lzap
 pkglib_LTLIBRARIES += libconsumer_kmd.la
 endif
