--- a/ocm/src/parsers/oparser_sqlite/Makefile.am
+++ b/ocm/src/parsers/oparser_sqlite/Makefile.am
@@ -1,5 +1,5 @@
-AM_CFLAGS = -I$(srcdir)/../ -I@OVIS_LIB_INCDIR@
-AM_LDFLAGS = -lovis_util -L@OVIS_LIB_LIB64DIR@ -L@OVIS_LIB_LIBDIR@
+AM_CFLAGS = -I$(srcdir)/../ @OVIS_LIB_INCDIR_FLAG@
+AM_LDFLAGS = -lovis_util @OVIS_LIB_LIBDIR_FLAG@
 
 sbin_PROGRAMS = oparser_sqlite
 oparser_sqlite_SOURCES = oparser_run.c template_parser.c \
