--- a/ocm/src/plugins/Makefile.am
+++ b/ocm/src/plugins/Makefile.am
@@ -1,7 +1,7 @@
 lib_LTLIBRARIES =
 
-AM_CFLAGS = -I$(srcdir)/../ -I@OVIS_LIB_INCDIR@
-AM_LDFLAGS = -lovis_util -L@OVIS_LIB_LIB64DIR@ -L@OVIS_LIB_LIBDIR@
+AM_CFLAGS = -I$(srcdir)/../ @OVIS_LIB_INCDIR_FLAG@
+AM_LDFLAGS = -lovis_util @OVIS_LIB_LIBDIR_FLAG@
 
 lib_LTLIBRARIES += libocmdsqlite3.la
 libocmdsqlite3_la_SOURCES = ocmdsqlite3.c
