--- a/komondor/src/test/Makefile.am
+++ b/komondor/src/test/Makefile.am
@@ -1,5 +1,5 @@
-AM_CFLAGS = -I@OVIS_LIB_INCDIR@
-AM_LDFLAGS = -L@OVIS_LIB_LIB64DIR@ -L@OVIS_LIB_LIBDIR@
+AM_CFLAGS = @OVIS_LIB_INCDIR_FLAG@
+AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@
 
 sbin_PROGRAMS = fake_me
 
