--- a/ldms/src/core/Makefile.am
+++ b/ldms/src/core/Makefile.am
@@ -11,7 +11,7 @@ ldmscoreinclude_HEADERS = ldms.h ldmsd.h ldms_xprt.h ogc_rbt.h
 
 libldms_la_SOURCES = ldms.c ldms_xprt.c ogc_rbt.c ldms_private.h
 libldms_la_CFLAGS = @OVIS_LIB_INCDIR_FLAG@
-libldms_la_LIBADD = -ldl -lpthread @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@ \
+libldms_la_LIBADD = -ldl -lpthread @OVIS_LIB_LIBDIR_FLAG@ \
 		    -lmmalloc
 lib_LTLIBRARIES += libldms.la
 
