--- a/ldms/src/ldmsd/Makefile.am
+++ b/ldms/src/ldmsd/Makefile.am
@@ -1,16 +1,16 @@
 sbin_PROGRAMS = ldmsd ldms_ls ldmsctl
 CORE = ../core
 AM_CFLAGS = -I$(srcdir)/$(CORE) @OVIS_LIB_INCDIR_FLAG@
-AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
+AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@
 
 ldms_ls_SOURCES = ldms_ls.c
 ldms_ls_LDADD = $(CORE)/libldms.la -lrt -lovis_util
 
 ldmsd_SOURCES = ldmsd.c ldmsd_store.c
 ldmsd_LDADD = $(CORE)/libldms.la
-ldmsd_LDFLAGS = $(AM_LDFLAGS) @LIBEVENT_LIB64DIR_FLAG@ @LIBEVENT_LIBDIR_FLAG@ \
+ldmsd_LDFLAGS = $(AM_LDFLAGS) @EVENTLIBS@ \
 		-levent -lpthread -levent_pthreads -lovis_util -ldl
-ldmsd_CFLAGS = $(AM_CFLAGS) @LIBEVENT_INCDIR_FLAG@
+ldmsd_CFLAGS = $(AM_CFLAGS) @EVENTINC@
 if ENABLE_YAML
 ldmsd_LDFLAGS += -lyaml
 ldmsd_CFLAGS += -DENABLE_YAML
@@ -18,10 +18,11 @@ endif
 
 if ENABLE_OCM
 ldmsd_SOURCES += ldmsd_ocm.c
-ldmsd_LDFLAGS += -lcoll -locm -L@OCM_LIB64DIR@ -L@OCM_LIBDIR@
-ldmsd_CFLAGS += -DENABLE_OCM -I@OCM_INCDIR@
+ldmsd_LDFLAGS += -lcoll -locm @OCM_LIBDIR_FLAG@
+ldmsd_CFLAGS += -DENABLE_OCM @OCM_INCDIR_FLAG@
 endif
 
 ldmsctl_SOURCES = ldmsctl.c
 ldmsctl_LDADD = $(CORE)/libldms.la
-ldmsctl_LDFLAGS = $(AM_LDFLAGS) -lreadline -lovis_ctrl -lovis_util @LDFLAGS_READLINE@
+ldmsctl_LDFLAGS = $(AM_LDFLAGS) -lreadline -lovis_ctrl -lovis_util \
+		  @LDFLAGS_READLINE@
