--- a/lib/src/zap/sock/Makefile.am
+++ b/lib/src/zap/sock/Makefile.am
@@ -3,5 +3,6 @@ lib_LTLIBRARIES = libzap_sock.la
 AM_CFLAGS = -I$(srcdir)/../
 
 libzap_sock_la_SOURCES = zap_sock.c zap_sock.h
-libzap_sock_la_LIBADD = @EVENTLIBS@ -levent -levent_pthreads ../libzap.la
-libzap_sock_la_LDFLAGS = -pthread
+libzap_sock_la_CFLAGS = $(AM_CFLAGS) @EVENTINC@
+libzap_sock_la_LIBADD = @EVENTLIBS@ ../libzap.la
+libzap_sock_la_LDFLAGS = $(AM_LDFLAGS) -pthread
