--- a/me/src/me/Makefile.am
+++ b/me/src/me/Makefile.am
@@ -1,14 +1,15 @@
 sbin_PROGRAMS = me mectl
 
 CORE = ../core
-AM_CFLAGS = -I$(srcdir)/$(CORE)
+AM_CFLAGS = -I$(srcdir)/$(CORE) @OVIS_LIB_INCDIR_FLAG@
+AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@
 
 me_SOURCES = me.c
 me_LDADD = $(CORE)/libme_core.la
-me_LDFLAGS = -ldl -lpthread -lzap -lcoll -lovis_util -locm
-me_CFLAGS = $(AM_CFLAGS)
+me_LDFLAGS = $(AM_LDFLAGS) -ldl -lpthread -lzap -lcoll -lovis_util -locm \
+	     @OCM_LIBDIR_FLAG@
+me_CFLAGS = $(AM_CFLAGS) @OCM_INCDIR_FLAG@
 
 mectl_SOURCES = mectl.c
 mectl_LDADD = $(CORE)/libme.la
-mectl_LDFLAGS = -lovis_ctrl -lovis_util -lreadline
-mectl_CFLAGS = $(AM_CFLAGS)
+mectl_LDFLAGS = $(AM_LDFLAGS) -lovis_ctrl -lovis_util -lreadline
