--- a/me/src/stores/Makefile.am
+++ b/me/src/stores/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS = .
 pkglib_LTLIBRARIES =
 CORE = ../core
 
-AM_CFLAGS = -I$(srcdir)/$(CORE)
+AM_CFLAGS = -I$(srcdir)/$(CORE) @OVIS_LIB_INCDIR_FLAG@
 COMMON_LIBADD = $(CORE)/libme_core.la
 
 if ENABLE_STORE_EXAMPLE
@@ -15,8 +15,8 @@ endif
 
 if ENABLE_STORE_SOS
 libstore_sos_la_SOURCES = store_sos.c
-libstore_sos_la_CFLAGS = $(AM_CFLAGS) -I@SOS_INCDIR@
-libstore_sos_la_LIBADD = $(COMMON_LIBADD) -lsos
+libstore_sos_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
+libstore_sos_la_LIBADD = $(COMMON_LIBADD) @SOS_LIBDIR_FLAG@ -lsos
 pkglib_LTLIBRARIES += libstore_sos.la
 endif
 
