--- a/me/src/test/Makefile.am
+++ b/me/src/test/Makefile.am
@@ -1,9 +1,8 @@
 sbin_PROGRAMS = me_gen_inputs
 
 CORE = ../core
-AM_CFLAGS = -I$(srcdir)/$(CORE)
+AM_CFLAGS = -I$(srcdir)/$(CORE) @OVIS_LIB_INCDIR_FLAG@
+AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@
 
 me_gen_inputs_SOURCES = me_gen_inputs.c
-me_gen_inputs_LDADD = $(CORE)/libme.la
-me_gen_inputs_LDFLAGS = -lzap -lcoll -lpthread
-me_gen_inputs_CFLAGS = $(AM_CFLAGS)
+me_gen_inputs_LDADD = $(CORE)/libme.la -lzap -lcoll -lpthread
