--- a/ocm/src/Makefile.am
+++ b/ocm/src/Makefile.am
@@ -1,7 +1,8 @@
 SUBDIRS = . test
 
-AM_CFLAGS = -I@OVIS_LIB_INCDIR@
-AM_LDFLAGS = -L@OVIS_LIB_LIBDIR@ -lpthread -lzap -levent -levent_pthreads -lcoll
+AM_CFLAGS = @OVIS_LIB_INCDIR_FLAG@ @EVENTINC@
+AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@ @EVENTLIBS@ -lpthread -lzap \
+	     -levent -levent_pthreads -lcoll
 
 libocm_la_SOURCES = ocm.c
 lib_LTLIBRARIES = libocm.la
