--- a/ocm/src/test/Makefile.am
+++ b/ocm/src/test/Makefile.am
@@ -1,7 +1,8 @@
 bin_PROGRAMS = ocmtest
 
-AM_CFLAGS = -I@OVIS_LIB_INCDIR@ -I$(top_srcdir)/src
-AM_LDFLAGS = -lpthread -lzap -levent -levent_pthreads -L@OVIS_LIB_LIBDIR@
+AM_CFLAGS = @OVIS_LIB_INCDIR_FLAG@ @EVENTINC@ -I$(top_srcdir)/src
+AM_LDFLAGS = @EVENTLIBS@ -lpthread -lzap -levent -levent_pthreads \
+	     @OVIS_LIB_LIBDIR_FLAG@
 
 ocmtest_SOURCES = ocmtest.c
 ocmtest_LDADD = ../libocm.la
