--- a/sos/Makefile.am
+++ b/sos/Makefile.am
@@ -28,6 +28,7 @@ rpm-clean:
 doxygen doxygen/html:
 	doxygen ./Doxyfile
 
+if ENABLE_DOC
 install-data-local: doxygen
 	$(MKDIR_P) $(DESTDIR)$(docdir)$(OPV)/html/search
 	for f in README COPYING ChangeLog ; do \
@@ -39,7 +40,7 @@ install-data-local: doxygen
 	for f in doxygen/html/search/*; do \
 		$(INSTALL_DATA) $$f $(DESTDIR)$(docdir)$(OPV)/html/search; \
 	done
-
+endif
 
 clean-local: rpm-clean
 
