eliminated rpath dependencies in installed bins
redirected doxygen spew with summary warning line.
added --disable-rpath for relocatable .so, executables.
fixed readline makefile.am usage.
fixed missing dependencies in makefile.ams

--- a/ldms/Makefile.am
+++ b/ldms/Makefile.am
@@ -21,9 +21,11 @@ rpm-clean:
 
 doc:
 	doxygen Doxyfile
+	@(errcnt=`wc -l ldms.doxygen.log|sed -e s'% .*%%g'`; echo doxygen errors $$errcnt; if [ "$$errcnt" -ge 10 ]; then echo "WOW WE NEED TO CLEAN UP THE COMMENTS!"; fi)
 
 doxygen doxygen/html:
 	doxygen ./Doxyfile
+	@(errcnt=`wc -l ldms.doxygen.log|sed -e s'% .*%%g'`; echo doxygen errors $$errcnt; if [ "$$errcnt" -ge 10 ]; then echo "WOW WE NEED TO CLEAN UP THE COMMENTS!"; fi)
 
 install-data-local: doxygen
 	$(MKDIR_P) $(DESTDIR)$(docdir)$(OPV)/html/search
