--- a/sos/configure.ac
+++ b/sos/configure.ac
@@ -9,6 +9,7 @@ AC_CONFIG_AUX_DIR(config)
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE()
 AC_PROG_LIBTOOL
+AC_LIB_RPATH
 
 dnl Checks for programs
 AC_PROG_CC
@@ -80,3 +81,9 @@ AC_SUBST(rpm_configure_args)
 
 AM_CONDITIONAL([HAVE_LD_VERSION_SCRIPT], [test "$ac_cv_version_script" = "yes"])
 AC_OUTPUT(Makefile src/Makefile swig/Makefile packaging/ovis-sos.spec Doxyfile)
+
+if test "x$enable_rpath" != "xyes"; then
+echo "TURNING libtool rpath into no-ops"
+sed -i 's|^hardcode_libdir_flag_spec=.*|hardcode_libdir_flag_spec=""|g' libtool
+sed -i 's|^runpath_var=LD_RUN_PATH|runpath_var=DIE_RPATH_DIE|g' libtool
+fi
