--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -9,6 +9,7 @@ AM_CONFIG_HEADER(config.h)
 dnl AM _INIT_AUTOMAKE([-Wno-portability])
 AM_INIT_AUTOMAKE([foreign])
 AC_PROG_LIBTOOL
+AC_LIB_RPATH
 
 dnl Checks for programs
 AC_PROG_CC
@@ -97,8 +98,8 @@ OPTION_WITH_EVENT
 dnl Check for pthread support
 AC_CHECK_LIB(pthread, pthread_mutex_init, [],
     AC_MSG_ERROR([pthread library not found.  ldms requires libpthread.]))
-dnl Reset LIBS variable.
-LIBS=""
+dnl save LIBS variable. 
+TMPLIBS="$LIBS"
 
 AX_LIB_READLINE
 
@@ -110,7 +111,8 @@ dnl AC_CHECK_LIB(readline, readline, [],
 dnl     AC_MSG_ERROR([libreadline not found. ldms requires libreadline.]),[$LDFLAGS_READLINE])
 dnl Reset LIBS variable.
 dnl LIBS=""
-LDFLAGS_READLINE=
+LDFLAGS_READLINE=$LIBS
+LIBS=$TMPLIBS
 AC_SUBST([LDFLAGS_READLINE])
 
 dnl Checks for libraries
@@ -239,3 +241,9 @@ AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile src/xprt/Makefile
 		 Doxyfile
 		 ldms.spec])
 AC_OUTPUT
+
+if test "x$enable_rpath" != "xyes"; then
+echo "TURNING libtool rpath into no-ops"
+sed -i 's|^hardcode_libdir_flag_spec=.*|hardcode_libdir_flag_spec=""|g' libtool
+sed -i 's|^runpath_var=LD_RUN_PATH|runpath_var=DIE_RPATH_DIE|g' libtool
+fi
