--- a/lib/packaging/ovis-lib-toss.spec.in
+++ b/lib/packaging/ovis-lib-toss.spec.in
@@ -19,7 +19,7 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 Source: %{name}-%{version}.tar.gz
 Requires: rpm >= 4.8.0
 BuildRequires: doxygen openssl-devel libibverbs-devel librdmacm-devel libevent2-devel
-Url: ovis.ca.sandia.gov/
+Url: http://ovis.ca.sandia.gov/
 
 Prefix: /opt/ovis
 
