baler: Memory leak and thread starvation bug fix.
Baler uses work queue entry to handle input (log messages) and output
(compressed messages) processing. The real leak problem before this change
exists as the work queue entries are not freed after they're done. However,
in the event of heavy input load, e.g. message processing in a batch, the work
entry producing thread seems to acquire the work queue (critical resource) most
of the time--leaving the consumer thread starved. This results in huge memory
consumption as the input work queue grows indefinitely, and mistakenly seen as
memory leak.

This fix addresses the leaking problem and starvation problem mentioned above.

Change-Id: Ifc324f66ef2f57a5d299fb2dc2a7452a808d6314

--- a/baler/src/baler/Makefile.am
+++ b/baler/src/baler/Makefile.am
@@ -34,7 +34,7 @@ lib_LTLIBRARIES += libbset.la
 # all libraries).
 libbaler_la_SOURCES = bwqueue.c btkn.c bptn.c binput.c boutput.c \
 		      bmapper.c bset.c bmvec.c bmem.c butils.c
-# libbaler_la_LIBADD = libbmapper.la libbmvec.la libbset.la
+libbaler_la_LDFLAGS = $(AM_LDFLAGS) -pthread
 lib_LTLIBRARIES += libbaler.la
 
 balerd_SOURCES = balerd.c
