--- a/lib/src/zap/sock/Makefile.am
+++ b/lib/src/zap/sock/Makefile.am
@@ -1,6 +1,6 @@
 lib_LTLIBRARIES = libzap_sock.la
 
-AM_CFLAGS = -I$(srcdir)/../
+AM_CFLAGS = -I$(srcdir)/../ -I$(top_srcdir)
 
 libzap_sock_la_SOURCES = zap_sock.c zap_sock.h
 libzap_sock_la_LIBADD = @EVENTLIBS@ -levent -levent_pthreads ../libzap.la
