--- a/sos/configure.ac
+++ b/sos/configure.ac
@@ -38,6 +38,7 @@ AC_C_BIGENDIAN(
 )
 
 AC_C_CONST
+AC_C_FLEXIBLE_ARRAY_MEMBER
 
 
 AC_CACHE_CHECK(whether ld accepts --version-script, ac_cv_version_script,
