--- a/ldms/src/core/Makefile.am
+++ b/ldms/src/core/Makefile.am
@@ -4,16 +4,19 @@ endif
 
 lib_LTLIBRARIES =
 
-AM_CFLAGS = -Wall $(DBGFLAGS)
+AM_CFLAGS = -Wall $(DBGFLAGS) -I$(top_srcdir)
 
 ldmscoreincludedir = $(includedir)/ldms
-ldmscoreinclude_HEADERS = ldms.h ldmsd.h ldms_xprt.h ogc_rbt.h
+ldmscoreinclude_HEADERS = ldms.h ldmsd.h ldms_xprt.h ogc_rbt.h 
 
 libldms_la_SOURCES = ldms.c ldms_xprt.c ogc_rbt.c ldms_private.h
 libldms_la_CFLAGS = @OVIS_LIB_INCDIR_FLAG@
 libldms_la_LIBADD = -ldl -lpthread @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@ \
 		    -lmmalloc -lcoll
 lib_LTLIBRARIES += libldms.la
+
+ldms_config.h: ../../config.h
+	cp ../../config.h ldms_config.h
 
 install-data-hook:
 #	cp $(top_builddir)/scripts/ldmsd /etc/init.d/ldmsd
