ldms: update libsos checking
This change updates libsos checking in configure.ac, eliminating unnecessary
library flags (at the checking).

Change-Id: I15fa6618ad647e087ac79a1874ae50003bd212a5

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -166,7 +166,7 @@ AC_CHECK_LIB( sos, sos_open,
 	[
 		AC_MSG_FAILURE(libsos not found)
 	],
-	-lpthread -lods -loidx -lidx $SOS_LIB64DIR_FLAG $SOS_LIBDIR_FLAG
+	$SOS_LIB64DIR_FLAG $SOS_LIBDIR_FLAG
 )
 dnl Reset LIBS variable.
 LIBS=""
