--- a/sos/src/Makefile.am
+++ b/sos/src/Makefile.am
@@ -132,6 +132,12 @@ mds_query_LDADD = libsos.la \
 
 libsos_conf = /etc/ld.so.conf.d/libsos.conf
 
+all-local:
+	(mkdir -p tmp && cd tmp && if test !  -h sos; then $(LN_S) @abs_srcdir@ sos; fi)
+
+clean-local:
+	rm tmp/sos; rmdir tmp
+
 # This has been disabled for now, to support the case that users want to
 # install sos locally (not system-wide).
 #
